--- a/AirBNB.Rmd
+++ b/AirBNB.Rmd
@@ -74,11 +74,11 @@ valueBox(nrow(df), icon = "fa-ship", color="rgb(100,100,100)")
 
 ### Average price per day
 ```{r, fig.height=0.25}
-valueBox(round(mean(df$price, na.rm = T),0), icon = "fa-heart", color="black(200,100,100)")
+valueBox(round(mean(df$price, na.rm = T),0), icon = "fa-money", color="black(200,100,100)")
 ```
 
 
-### Avg Prices by Neighborhood
+### Number of Stays by Neighborhood
 ```{r,fig.height=4}
 fig <- df %>% plot_ly(labels = ~neighbourhood_group, values = ~avg_price)
 fig <- fig %>% add_pie(hole = 0.6)
@@ -89,7 +89,7 @@ fig
 ```
 
 
-### Violin Plot: AVG Price by Neighborhood
+### Average Price by Neighborhood
 ```{r,fig.height=4}
 fig2 <- df %>%
   plot_ly(
@@ -125,49 +125,49 @@ Room type
  Column {data-width=700 .colored }
 -----------------------------------------------------------------------
 
-### Average price per day of common room
+### Average price per day of normal stays
 ```{r, fig.height=2.5}
 hchart(df$avg_price[df$avg_price < 500], color = "#AA4643", name = "Price per day") %>%
-  hc_title(text = "Average price of common room") %>%
+  hc_title(text = "Average price of normal stays") %>%
   hc_add_theme(hc_theme_ffx())
 ```
 
-### Average price per day of high-class room
+### Average price per day of luxury stays
 ```{r,fig.height=2.5}
 hchart(df$avg_price[df$avg_price < 500], color = "#3D96AE", name = "Price per day") %>%
-  hc_title(text = "Average price of high-class room") %>%
+  hc_title(text = "Average price of luxury stays") %>%
   hc_add_theme(hc_theme_ffx())
 ```
 
 Column {data-width=300}
 -----------------------------------------------------------------------
 
-### Number of common rooms
+### Number of normal stays
 ```{r,fig.height=0.25}
 valueBox(nrow(df %>% 
                 filter(avg_price < 500)), icon = "fa-heart",color="#B71C1C")
 ```
 
 
-### Average price per day of common rooms
+### Average price per day of luxury stays
 ```{r, fig.height=0.25}
-valueBox(round(mean(df$avg_price[df$avg_price < 500]),0), icon = "fa-heart",color="#B71C1C")
+valueBox(round(mean(df$avg_price[df$avg_price < 500]),0), icon = "fa-money",color="#B71C1C")
 ```
 
-### Number of high-class room
+### Number of luxury stays
 ```{r, fig.height=0.25}
 valueBox(nrow(df %>% 
                 filter(avg_price >= 500)), icon = "fa-heart",color="#006699")
 ```
 
-### Average price per day of high-class rooms
+### Average price per day of luxury stays
 ```{r, fig.height=0.25}
-valueBox(round(mean(df$avg_price[df$avg_price >= 500]),0), icon = "fa-heart",color="#006699")
+valueBox(round(mean(df$avg_price[df$avg_price >= 500]),0), icon = "fa-money",color="#006699")
 ```
 
 ### Availability
 ```{r,fig.height=3}
 hchart(df$availability_365, color = "#336666", name = "Availability") %>%
-  hc_title(text = "Overall room availability") %>%
+  hc_title(text = "Room Availability Throughout the Calendar Year") %>%
   hc_add_theme(hc_theme_ffx())
 ```
